# simulation_ws

./: .gitignore  README.md
src/my_amr_sim/: package.xml  setup.py
src/my_amr_sim/config/: controllers.yaml
src/my_amr_sim/meshes/: body.stl  body_ccw_90.stl  ellipse_micro_ahrs.stl  ellipse_micro_ahrs_ccw_90.stl  rplidar_s2.stl  rplidar_s2_frame_aligned.stl  wheel.stl  wheel_y_ccw_90.stl
src/my_amr_sim/urdf/: my_amr.urdf.xacro  ros2_control.xacro
src/sim_bringup/: package.xml  setup.py
src/sim_bringup/config/bridges/: my_amr.yaml
src/sim_bringup/launch/: sim.launch.py  spawn_robot.launch.py
src/sim_bringup/worlds/hospital/: hospital.sdf
src/sim_bringup/worlds/warehouse/: warehouse.sdf
